@@ -101,7 +101,7 @@
                 <li>Specify the target bottle using the -b flag in command line</li>
                 <li>Run executables without show the Bottles Window</li>
                 <li>Dependencies can now set register keys</li>
-                <li>Dependencies can now extract 7zip archives</li>
+                <li>Dependencies can now extract archives</li>
                 <li>Dependencies can now uninstall other dependencies</li>
                 <li>Dependencies can now install more dll in one step</li>
                 <li>Dependencies can now register fonts in the Bottle Register to make them discoverable by the runner</li>
@@ -115,11 +115,14 @@
                 <li>Fix crash log path on Flatpak</li>
                 <li>Fixed an issue causing Bottles to detect downloaded dxvk even when it fails</li>
                 <li>Fixed a bug that cause some programs to not be placed in Programs section</li>
+                <li>Fixed a bug that cause Bottles to crash when a component download fail</li>
                 <li>Uninstallers are now no longer displayed in the Programs list</li>
                 <li>Disable uninstaller button for dependencies installed from cab files</li>
+                <li>Access Bottles preferences from the bottle creation view</li>
+                <li>A spinner is now displayed when installing dependencies, programs and components</li>
                 <li>Warning for missing cabextract tool</li>
-                <li>A spinner is now displayed when installing a dependency</li>
                 <li>Warning for experimental features</li>
+                <li>Warning for enables testing repository</li>
                 <li>Several improvements in runner management</li>
                 <li>Added icons to the sidebar</li>
                 <li>Experimantal support for Bottles installers</li>
